fix: user list flickering
Add debounce to update player list for USER_JOINED event
Add a bit of delay to counter initial update to sync with
user list updated.

--- a/src/app/multi/lobby/lobby.module.scss
+++ b/src/app/multi/lobby/lobby.module.scss
@@ -83,6 +83,11 @@
   font-size: 1.5rem;
 }
 
+.countdown_hidden {
+  font-size: 1.5rem;
+  visibility: hidden;
+}
+
 .highlight {
   color: var(--highlight);
   font-weight: bold;
